--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data: 
-  # {{ .Values.configmap.data }}
-  version: alpine
+  {{ .Values.configmap.data }}
+  # version: alpine
 kind: ConfigMap
 metadata:
   name: nginx-version
